--- a/media-queries.html
+++ b/media-queries.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Media Queries</title>
     <link rel="stylesheet" href="media-queries.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans400&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="alert-info hidden-on-desktop">
