--- a/media-queries.html
+++ b/media-queries.html
@@ -33,9 +33,9 @@
 <footer>
     <p>(c) 2017 All rights reserved</p>
     <div id="social-media-links">
-        <a href="#"><img src="assets/facebook_icon.png" alt="facebook" class="FB"></a>
-        <a href="#"><img src="assets/twitter_icon.png" alt="twitter_icon" class="twitter"></a>
-        <a href="#"><img src="assets/pinterest-icon.png" alt="pinterest.png" class="pinterest"></a>
+        <a href="https://www.facebook.com"><img src="assets/facebook_icon.png" alt="facebook" class="FB"></a>
+        <a href="https://www.twitter.com"><img src="assets/twitter_icon.png" alt="twitter_icon" class="twitter"></a>
+        <a href="https://www.pinterest.com"><img src="assets/pinterest-icon.png" alt="pinterest.png" class="pinterest"></a>
     </div>
 </footer>
 </body>
