--- a/media-queries.html
+++ b/media-queries.html
@@ -20,15 +20,23 @@
     </ul>
 </nav>
 <div class="header-img">
-    <img src="https://via.placeholder.com/900x400?" alt="">
+    <img src="https://via.placeholder.com/890x385?" alt="890x385" id="desktop_Picture">
+    <img src="https://via.placeholder.com/339x224?" alt="339x224" id="mobile_Picture">
+    <!--  Added "desktop" and "mobile" picture. these do and make zero difference to the project and are made after completion.
+          just want to showcase the ability to have multiple pictures and only let them appear at specific sizes
+                                                                                                                ~DZ
+           }-->
 </div>
 <section id="main" class="main">
     <h2>Main Section</h2>
-    <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+    <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium
+        sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente
+        in?</p>
 </section>
 <section class="sub-section">
     <h2>Sub-section</h2>
-    <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+    <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum
+        totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
 </section>
 <footer>
     <p>(c) 2017 All rights reserved</p>
